# krr-labs

./: README.md  hw-template.tex  pyproject.toml
hw1/: Homework Assignment 1.skim  hw1.py
hw2/: 13010840_13858149.ipynb  asp_work.lp  homework2.ipynb  saturation.lp  sudoku_func.py  sudoku_sat.py
hw3/: 13858149_13010840.lp  hw3.lp  hw3_fluents.lp
