[tool.poetry]
name = "krr-labs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-sat = "^0.1.7-alpha.16"
cffi = "1.15.0"
clingo = "5.5.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.0"
black = "^22.1.0"
flake8 = "^4.0.1"
jupyterlab-code-formatter = "^1.4.10"
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
